--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Poppins:wght@300;400;500&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <title>Knowledge</title>
+  <title>#NewsReader</title>
 </head>
 
 <body>
